--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-# config file - sensitive details
-ssx_prediction/config.py
-
 # Results files
 data/results
+data/resources/deets.txt
 notebooks/
 
 .DS_store
